更新提交逻辑 修复无法释放线程bug