@@ -16,6 +16,7 @@
     <url>https://your-project-url.com</url>
     <properties>
         <java.version>17</java.version>
+        <logback.version>1.5.11</logback.version>
     </properties>
     <dependencies>
         <dependency>
@@ -50,13 +51,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <!-- Logback 实现 -->
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 
@@ -73,7 +79,7 @@
                     <source>17</source>
                     <target>17</target>
                     <!-- 如果不需要预览功能，可以删除以下行 -->
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs>-enable-preview</compilerArgs> -->
                 </configuration>
             </plugin>
         </plugins>
